--- a/code-style.editorconfig
+++ b/code-style.editorconfig
@@ -46,10 +46,10 @@ ij_haml_keep_indents_on_empty_lines = false
 ij_java_align_consecutive_assignments = false
 ij_java_align_consecutive_variable_declarations = false
 ij_java_align_group_field_declarations = false
-ij_java_align_multiline_annotation_parameters = false
-ij_java_align_multiline_array_initializer_expression = false
+ij_java_align_multiline_annotation_parameters = true
+ij_java_align_multiline_array_initializer_expression = true
 ij_java_align_multiline_assignment = false
-ij_java_align_multiline_binary_operation = false
+ij_java_align_multiline_binary_operation = true
 ij_java_align_multiline_chained_methods = false
 ij_java_align_multiline_extends_list = false
 ij_java_align_multiline_for = true
@@ -65,15 +65,15 @@ ij_java_align_multiline_throws_list = false
 ij_java_align_subsequent_simple_methods = false
 ij_java_align_throws_keyword = false
 ij_java_align_types_in_multi_catch = true
-ij_java_annotation_parameter_wrap = off
-ij_java_array_initializer_new_line_after_left_brace = false
-ij_java_array_initializer_right_brace_on_new_line = false
-ij_java_array_initializer_wrap = off
+ij_java_annotation_parameter_wrap = normal
+ij_java_array_initializer_new_line_after_left_brace = true
+ij_java_array_initializer_right_brace_on_new_line = true
+ij_java_array_initializer_wrap = normal
 ij_java_assert_statement_colon_on_next_line = false
 ij_java_assert_statement_wrap = off
 ij_java_assignment_wrap = off
 ij_java_binary_operation_sign_on_next_line = false
-ij_java_binary_operation_wrap = off
+ij_java_binary_operation_wrap = normal
 ij_java_blank_lines_after_anonymous_class_header = 0
 ij_java_blank_lines_after_class_header = 0
 ij_java_blank_lines_after_imports = 1
@@ -88,7 +88,7 @@ ij_java_blank_lines_before_class_end = 0
 ij_java_blank_lines_before_imports = 1
 ij_java_blank_lines_before_method_body = 0
 ij_java_blank_lines_before_package = 0
-ij_java_block_brace_style = end_of_line
+ij_java_block_brace_style = next_line
 ij_java_block_comment_add_space = false
 ij_java_block_comment_at_first_column = true
 ij_java_builder_methods = none
@@ -96,9 +96,9 @@ ij_java_call_parameters_new_line_after_left_paren = false
 ij_java_call_parameters_right_paren_on_new_line = false
 ij_java_call_parameters_wrap = off
 ij_java_case_statement_on_separate_line = true
-ij_java_catch_on_new_line = false
-ij_java_class_annotation_wrap = split_into_lines
-ij_java_class_brace_style = end_of_line
+ij_java_catch_on_new_line = true
+ij_java_class_annotation_wrap = normal
+ij_java_class_brace_style = next_line
 ij_java_class_count_to_use_import_on_demand = 999
 ij_java_class_names_in_javadoc = 1
 ij_java_do_not_indent_top_level_class_members = false
@@ -123,7 +123,7 @@ ij_java_doc_keep_invalid_tags = true
 ij_java_doc_param_description_on_new_line = false
 ij_java_doc_preserve_line_breaks = false
 ij_java_doc_use_throws_not_exception_tag = true
-ij_java_else_on_new_line = false
+ij_java_else_on_new_line = true
 ij_java_entity_dd_suffix = EJB
 ij_java_entity_eb_suffix = Bean
 ij_java_entity_hi_suffix = Home
@@ -132,18 +132,18 @@ ij_java_entity_lhi_suffix = Home
 ij_java_entity_li_prefix = Local
 ij_java_entity_pk_class = java.lang.String
 ij_java_entity_vo_suffix = VO
-ij_java_enum_constants_wrap = off
+ij_java_enum_constants_wrap = split_into_lines
 ij_java_extends_keyword_wrap = off
 ij_java_extends_list_wrap = off
-ij_java_field_annotation_wrap = split_into_lines
-ij_java_finally_on_new_line = false
+ij_java_field_annotation_wrap = normal
+ij_java_finally_on_new_line = true
 ij_java_for_brace_force = never
 ij_java_for_statement_new_line_after_left_paren = false
 ij_java_for_statement_right_paren_on_new_line = false
 ij_java_for_statement_wrap = off
 ij_java_generate_final_locals = false
 ij_java_generate_final_parameters = false
-ij_java_if_brace_force = never
+ij_java_if_brace_force = if_multiline
 ij_java_imports_layout = *,|,javax.**,java.**,|,$*
 ij_java_indent_case_from_switch = true
 ij_java_insert_inner_class_imports = false
@@ -159,9 +159,9 @@ ij_java_keep_indents_on_empty_lines = false
 ij_java_keep_line_breaks = true
 ij_java_keep_multiple_expressions_in_one_line = false
 ij_java_keep_simple_blocks_in_one_line = false
-ij_java_keep_simple_classes_in_one_line = false
+ij_java_keep_simple_classes_in_one_line = true
 ij_java_keep_simple_lambdas_in_one_line = false
-ij_java_keep_simple_methods_in_one_line = false
+ij_java_keep_simple_methods_in_one_line = true
 ij_java_label_indent_absolute = false
 ij_java_label_indent_size = 0
 ij_java_lambda_brace_style = end_of_line
@@ -171,16 +171,16 @@ ij_java_line_comment_add_space_on_reformat = false
 ij_java_line_comment_at_first_column = true
 ij_java_message_dd_suffix = EJB
 ij_java_message_eb_suffix = Bean
-ij_java_method_annotation_wrap = split_into_lines
-ij_java_method_brace_style = end_of_line
+ij_java_method_annotation_wrap = normal
+ij_java_method_brace_style = next_line
 ij_java_method_call_chain_wrap = off
 ij_java_method_parameters_new_line_after_left_paren = false
 ij_java_method_parameters_right_paren_on_new_line = false
 ij_java_method_parameters_wrap = off
 ij_java_modifier_list_wrap = false
-ij_java_multi_catch_types_wrap = normal
+ij_java_multi_catch_types_wrap = on_every_item
 ij_java_names_count_to_use_import_on_demand = 999
-ij_java_new_line_after_lparen_in_annotation = false
+ij_java_new_line_after_lparen_in_annotation = true
 ij_java_new_line_after_lparen_in_record_header = false
 ij_java_packages_to_use_import_on_demand = java.awt.*,javax.swing.*
 ij_java_parameter_annotation_wrap = off
@@ -196,8 +196,8 @@ ij_java_replace_null_check = true
 ij_java_replace_sum_lambda_with_method_ref = true
 ij_java_resource_list_new_line_after_left_paren = false
 ij_java_resource_list_right_paren_on_new_line = false
-ij_java_resource_list_wrap = off
-ij_java_rparen_on_new_line_in_annotation = false
+ij_java_resource_list_wrap = on_every_item
+ij_java_rparen_on_new_line_in_annotation = true
 ij_java_rparen_on_new_line_in_record_header = false
 ij_java_session_dd_suffix = EJB
 ij_java_session_eb_suffix = Bean
@@ -284,8 +284,8 @@ ij_java_spaces_within_try_parentheses = false
 ij_java_spaces_within_while_parentheses = false
 ij_java_special_else_if_treatment = true
 ij_java_subclass_name_suffix = Impl
-ij_java_ternary_operation_signs_on_next_line = false
-ij_java_ternary_operation_wrap = off
+ij_java_ternary_operation_signs_on_next_line = true
+ij_java_ternary_operation_wrap = on_every_item
 ij_java_test_name_suffix = Test
 ij_java_throws_keyword_wrap = off
 ij_java_throws_list_wrap = off
